--- a/index.html
+++ b/index.html
@@ -33,3 +33,5 @@
    </tbody>
 </table>
 <p><img style="display: block; margin-left: auto; margin-right: auto;" src="https://library.wur.nl/infoboard/4b_searching/images/and.gif" alt="W3Schools.com" /></p>
+<a href="https://www.boolean-algebra.com/">Try it out!</a>
+
