--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>Siin on pealkiri1</h1>
 <h2>ITI0101 - 215397</h2>
 <h3>boolean logic table</h3>
-<p>Boolean Logic is a form of algebra which is centered around three simple words known as Boolean Operators: Or and Not. At the heart of Boolean Logic is the idea that all values are either true or false. ... This article explores the uses of individual Boolean operators and how they relate to building audiences.</p>
+<p>Boolean algebra is different from elementary algebra as the latter deals with numerical operations and the former deals with logical operations. Elementary algebra is expressed using basic mathematical functions, such as addition, subtraction, multiplication, and division, whereas Boolean algebra deals with conjunction, disjunction, and negation. The concept of Boolean algebra was first introduced by George Boole in his book, The Mathematical Analysis of Logic, and further expanded upon in his book, An Investigation of the Laws of Thought. Since its concept has been detailed, Boolean algebra's primary use has been in computer programming languages. Its mathematical purposes are used in set theory and statistics.</p>
 <h3 style="text-align: center;">AND</h3>
 <table style="margin-left: auto; margin-right: auto;">
    <tbody>
